# nphard-generators

./: .gitignore  .pylintrc  README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml
nphard-generators-env/: pyvenv.cfg
nphard-generators-env/Scripts/: activate  activate.bat
src/nphard_generators/: __init__.py  custom_factory.template  graph_factory.py  random_factory.py
src/nphard_generators/example/: __init__.py  example_generator.py
src/nphard_generators/hamiltonian_cycle_problem/: hcp_petersen_factory.py  hcp_random_factory.py  hcp_syn_h1_factory.py  hcp_syn_h2_factory.py
src/nphard_generators/maximum_clique_problem/: mcp_brock_factory.py  mcp_cfat_factory.py  mcp_hamming2_factory.py  mcp_hamming3_factory.py  mcp_hamming_factory.py  mcp_random_factory.py  mcp_sanchis_factory.py  mcp_syn_a1_factory.py  mcp_syn_a3_factory.py
src/nphard_generators/types/: __init__.py  graph_problem.py  hc_problem.py  mc_problem.py
tests/: test_example_module.py
tests/hamiltonian_cycle_problem/: test_hcp_petersen_factory.py  test_hcp_random_factory.py  test_hcp_syn_h1_factory.py  test_hcp_syn_h2_factory.py
tests/maximum_clique_problem/: test_mcp_brock_factory.py  test_mcp_cfat_factory.py  test_mcp_hamming2_factory.py  test_mcp_hamming3_factory.py  test_mcp_random_factory.py  test_mcp_sanchis_factory.py  test_mcp_syn_a1_factory.py  test_mcp_syn_a3_factory.py
tests/types/: test_graph_problem.py  test_hc_problem.py  test_mc_problem.py
tests/types/hamiltonian_cycle_problem/: test_hc_problem.py  test_hc_problem_solution.py
(+7 files in other folders)
